<resources>
    <string name="app_name" translatable="false">MindUp</string>
    <string name="ma">Mental Arithmetic</string>
    <string name="result">Result</string>
    <string name="next">Next</string>
    <string name="tru">True</string>
    <string name="fals">False</string>
    <string name="logic">Logic</string>
    <string name="logic_two">Logic 2</string>
    <string name="logic_three">Logic 3</string>
    <string name="num_chain">Chains of numbers</string>
    <string name="restart">Restart</string>
    <string name="cutouts">Cutouts</string>
    <string name="usetimer">Use timer</string>
    <string name="countdown">Use countdown</string>
    <string name="settings">Settings</string>
    <string name="cutouts_two">Cutouts 2</string>
    <string name="cu_two_info">This is beta, sometimes images are nearly the grey rectangle. Dont worry if You can\'t win.</string>
    <string name="ok">Ok</string>
    <string name="word_chain">Chain of words</string>
    <string name="back">Back</string>
    <string name="w_ch_size">Words in chain</string>
    <string name="set_max_size">Set max value</string>
    <string name="cutouts_three">Cutouts 3</string>
    <string name="cu_three_info_po">Download file "additional.zip" from Dropbox - https://www.dropbox.com/s/v1y624w07b6c2mj/additional.zip?dl=1</string>
    <string name="cu_three_info_pt">Place it in the directory </string>
    <string name="cu_three_info_pth">and restart app.</string>
    <string name="cu_info">Pick part of the main image from 6 variants.</string>
    <string name="ma_info">Count answer and put it into text field.</string>
    <string name="nc_info">Remember all numbers and put them into text field.</string>
    <string name="app">App</string>
    <string name="hints">Hints</string>
    <string name="show_hints">Show hints</string>
    <string name="colors">Colors</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="orange">Orange</string>
    <string name="grey">Grey</string>
    <string name="colors_info">Select the text color, but not its meaning.</string>
    <string name="save_results">Save results</string>
    <string name="save_results_to_dir">Save results to /root_folder/MindUp</string>
    <string name="exit">Exit</string>
    <string name="exit_f_a">Exit from app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="saved_as">Saved as:</string>
    <string name="pi">Pi</string>
    <string name="graphs">Graphs</string>
    <string name="ma_two">Mental Arithmetic 2</string>

    <!--space-->
    <string name="space">В @year году космические путешественники нашли @color_planet планету
    @planet_name возле @color_star звезды @star_name.\nГруппа из @men_count мужчин и
    @women_count женщин направилась к планете на @spaceship_count космических кораблях.
    В группе находились космический инженер @engineer_class класса @engineer_name,
    доктор @doctor_class класса @doctor_name и химик @chemist_class класса @chemist_name.\n
    После @days_count дней исследований группа не смогла выйти на свзяь с капитаном основного
    корабля @cap_name. К счастью, космический инженер смог связаться с капитаном соседней
    экспедиции @saver_name, и все путешественники были спасены.</string>
    <string-array name="color_list">
        <item>Белый</item>
        <item>Красный</item>
        <item>Розовый</item>
        <item>Голубой</item>
        <item>Желтый</item>
        <item>Оранжевый</item>
    </string-array>
    <string-array name="planet_color_text">
        <item>Белую</item>
        <item>Красную</item>
        <item>Розовую</item>
        <item>Голубую</item>
        <item>Желтую</item>
        <item>Оранжевую</item>
    </string-array>
    <string-array name="star_color_text">
        <item>Белой</item>
        <item>Красной</item>
        <item>Розовой</item>
        <item>Голубой</item>
        <item>Желтой</item>
        <item>Оранжевой</item>
    </string-array>
    <string-array name="names">
        <item>Василий</item>
        <item>Анатолий</item>
        <item>Генадий</item>
        <item>Валерий</item>
        <item>Пётр</item>
        <item>Иннокентий</item>
        <item>R2D2</item>
        <item>Эдуард</item>
        <item>Андрей</item>
        <item>Алексей</item>
    </string-array>
    <string-array name="caps_names">
        <item>Василием</item>
        <item>Анатолием</item>
        <item>Генадием</item>
        <item>Валерием</item>
        <item>Пётром</item>
        <item>Иннокентием</item>
        <item>R2D2</item>
        <item>Эдуардом</item>
        <item>Андреем</item>
        <item>Алексеем</item>
    </string-array>
    <!--space-->

    <string name="text">Text</string>
    <string name="text_info">Read the text and remember all information like names, dates etc. After reading answer 10 questions.</string>
    <string name="squares_one">Squares (11-55)</string>
    <string name="squares_two">Squares (56-99)</string>
    <string name="sq_sh">Schulte table</string>
    <string name="next_num">Next number</string>
    <string name="sq_sh_info">Consistently press buttons from 1 to 25.</string>

    <string-array name="w_ch_sizes" translatable="false">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>
    <string-array name="w_ch_sizes_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="error">Error</string>
    <string name="results">Results</string>
    <string name="all">All</string>
    <string name="current_results">Current results</string>
</resources>
