<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/app">
        <CheckBoxPreference
            android:title="@string/usetimer"
            android:summary="@string/countdown"
            android:key="countdown"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:title="@string/hints"
            android:summary="@string/show_hints"
            android:defaultValue="true"
            android:key="hints"/>
    </PreferenceCategory>
    <!--Добавь сюда списки с максимальными значениями-->
    <!--<PreferenceCategory
        android:title="@string/word_chain">
        <ListPreference
            android:entries="@array/word_chain_length"
            android:entryValues="@array/entry_values"
            android:key="w_ch_size"
            android:title="@string/w_ch_size"
            android:defaultValue="1"
            android:summary="@string/set_max_size" />
    </PreferenceCategory> список для потомков :D-->
</PreferenceScreen>